--- a/CalculoPrecoVenda/CalculoPrecoVenda/App.config
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/App.config
@@ -1,6 +1,55 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="CalculoPrecoVenda.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <connectionStrings>
+    <add name="CalculoPrecoVendaDb" 
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Data\CalculoPrecoVendaDB.mdf;Initial Catalog=CalculoPrecoVendaDB;Integrated Security=True;Connect Timeout=30"
+         providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <userSettings>
+    <CalculoPrecoVenda.Settings>
+      <setting name="Irpj" serializeAs="String">
+        <value>0.02</value>
+      </setting>
+      <setting name="Csll" serializeAs="String">
+        <value>0.03</value>
+      </setting>
+      <setting name="Pis" serializeAs="String">
+        <value>0.0065</value>
+      </setting>
+      <setting name="Cofins" serializeAs="String">
+        <value>0.03</value>
+      </setting>
+      <setting name="Lucro1" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Lucro2" serializeAs="String">
+        <value>0.05</value>
+      </setting>
+      <setting name="Lucro3" serializeAs="String">
+        <value>0.1</value>
+      </setting>
+      <setting name="Lucro4" serializeAs="String">
+        <value>0.15</value>
+      </setting>
+      <setting name="Lucro5" serializeAs="String">
+        <value>0.2</value>
+      </setting>
+    </CalculoPrecoVenda.Settings>
+  </userSettings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
