--- a/CalculoPrecoVenda/CalculoPrecoVenda/App.config
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/App.config
@@ -12,7 +12,7 @@
   </startup>
   <connectionStrings>
     <add name="CalculoPrecoVendaDb" 
-         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|CalculoPrecoVendaDb.mdf;Initial Catalog=CalculoPrecoVendaDb;Integrated Security=True;Connect Timeout=30"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CalculoPrecoVendaDb.mdf;Initial Catalog=CalculoPrecoVendaDb;Integrated Security=True;Connect Timeout=30"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <userSettings>
