--- a/CalculoPrecoVenda/CalculoPrecoVenda/App.config
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/App.config
@@ -11,38 +11,47 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="CalculoPrecoVendaDb" 
+    <add name="CalculoPrecoVendaDb"
          connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CalculoPrecoVendaDb.mdf;Initial Catalog=CalculoPrecoVendaDb;Integrated Security=True;Connect Timeout=30"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <userSettings>
     <CalculoPrecoVenda.Settings>
       <setting name="Irpj" serializeAs="String">
-        <value>0.02</value>
+        <value>2</value>
       </setting>
       <setting name="Csll" serializeAs="String">
-        <value>0.03</value>
+        <value>3</value>
       </setting>
       <setting name="Pis" serializeAs="String">
-        <value>0.0065</value>
+        <value>0.65</value>
       </setting>
       <setting name="Cofins" serializeAs="String">
-        <value>0.03</value>
+        <value>3</value>
       </setting>
       <setting name="Lucro1" serializeAs="String">
         <value>0</value>
       </setting>
       <setting name="Lucro2" serializeAs="String">
-        <value>0.05</value>
+        <value>5</value>
       </setting>
       <setting name="Lucro3" serializeAs="String">
-        <value>0.1</value>
+        <value>10</value>
       </setting>
       <setting name="Lucro4" serializeAs="String">
-        <value>0.15</value>
+        <value>15</value>
       </setting>
       <setting name="Lucro5" serializeAs="String">
-        <value>0.2</value>
+        <value>20</value>
+      </setting>
+      <setting name="Capatazia" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="Fti" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="Uea" serializeAs="String">
+        <value>10</value>
       </setting>
     </CalculoPrecoVenda.Settings>
   </userSettings>
