--- a/CalculoPrecoVenda/CalculoPrecoVenda/CalculoPrecoVenda.csproj
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/CalculoPrecoVenda.csproj
@@ -85,6 +85,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CalcPrecoRepo.cs" />
     <Compile Include="Data\CalculoPreçoVendaContext.cs" />
     <Compile Include="Data\NcmConfiguration.cs" />
     <Compile Include="Data\UnidadeFederadaConfiguration.cs" />
@@ -92,9 +93,16 @@
     <Compile Include="Migrations\201611051438455_Initial.Designer.cs">
       <DependentUpon>201611051438455_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611231641376_InsereFieldAliquotaInteres.cs" />
+    <Compile Include="Migrations\201611231641376_InsereFieldAliquotaInteres.Designer.cs">
+      <DependentUpon>201611231641376_InsereFieldAliquotaInteres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="MinusConverter.cs" />
     <Compile Include="Model\Ncm.cs" />
+    <Compile Include="Model\PrecoReposicao.cs" />
     <Compile Include="Model\UnidadeFederada.cs" />
+    <Compile Include="MultiplyConverter.cs" />
     <Compile Include="Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -136,6 +144,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="SumConverter.cs" />
     <Compile Include="ValueIsNotNull.cs" />
     <Compile Include="View\frmCalculoICMS.xaml.cs">
       <DependentUpon>frmCalculoICMS.xaml</DependentUpon>
@@ -188,6 +197,9 @@
     </Compile>
     <EmbeddedResource Include="Migrations\201611051438455_Initial.resx">
       <DependentUpon>201611051438455_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611231641376_InsereFieldAliquotaInteres.resx">
+      <DependentUpon>201611231641376_InsereFieldAliquotaInteres.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
