--- a/CalculoPrecoVenda/CalculoPrecoVenda/App.config
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/App.config
@@ -50,7 +50,7 @@
       <setting name="Fti" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="Uea" serializeAs="String">
+      <setting name="Iof" serializeAs="String">
         <value>10</value>
       </setting>
     </CalculoPrecoVenda.Settings>
