--- a/CalculoPrecoVenda/CalculoPrecoVenda/App.config
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/App.config
@@ -53,6 +53,15 @@
       <setting name="Iof" serializeAs="String">
         <value>10</value>
       </setting>
+      <setting name="IcmsMicro" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="IcmsInterImp" serializeAs="String">
+        <value>4</value>
+      </setting>
+      <setting name="IcmsZonaFranca" serializeAs="String">
+        <value>7</value>
+      </setting>
     </CalculoPrecoVenda.Settings>
   </userSettings>
   <entityFramework>
