--- a/CalculoPrecoVenda/CalculoPrecoVenda/App.config
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/App.config
@@ -50,17 +50,17 @@
       <setting name="Fti" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="Iof" serializeAs="String">
-        <value>10</value>
+      <setting name="AliquotaIcmsEmbarcacoes" serializeAs="String">
+        <value>25</value>
       </setting>
-      <setting name="IcmsMicro" serializeAs="String">
+      <setting name="AliquotaIcmsMicro" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="IcmsInterImp" serializeAs="String">
+      <setting name="AliquotaIcmsInterImportados" serializeAs="String">
         <value>4</value>
       </setting>
-      <setting name="IcmsZonaFranca" serializeAs="String">
-        <value>7</value>
+      <setting name="AliquotaIcmsInterNacionais" serializeAs="String">
+        <value>12</value>
       </setting>
     </CalculoPrecoVenda.Settings>
   </userSettings>
