--- a/CalculoPrecoVenda/CalculoPrecoVenda/CalculoPrecoVenda.csproj
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/CalculoPrecoVenda.csproj
@@ -85,12 +85,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="CalcPrecoRepo.cs" />
+    <Compile Include="CalcPrecoRepoConverter.cs" />
     <Compile Include="CofinsConverter.cs" />
     <Compile Include="Data\CalculoPreçoVendaContext.cs" />
     <Compile Include="Data\NcmConfiguration.cs" />
     <Compile Include="Data\UnidadeFederadaConfiguration.cs" />
-    <Compile Include="IcmsConverter.cs" />
+    <Compile Include="IcmsEntradaConverter.cs" />
+    <Compile Include="IcmsSaidaConverter.cs" />
     <Compile Include="Migrations\201611051438455_Initial.cs" />
     <Compile Include="Migrations\201611051438455_Initial.Designer.cs">
       <DependentUpon>201611051438455_Initial.cs</DependentUpon>
@@ -104,7 +105,7 @@
       <DependentUpon>201612021510407_InsertFieldSusbtTrubt.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="MinusConverter.cs" />
+    <Compile Include="SubtractConverter.cs" />
     <Compile Include="Model\Ncm.cs" />
     <Compile Include="Model\PrecoReposicao.cs" />
     <Compile Include="Model\UnidadeFederada.cs" />
