--- a/CalculoPrecoVenda/CalculoPrecoVenda/App.config
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="CalculoPrecoVenda.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="CalculoPrecoVenda.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -50,17 +51,17 @@
       <setting name="Fti" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="AliquotaIcmsEmbarcacoes" serializeAs="String">
-        <value>25</value>
-      </setting>
       <setting name="AliquotaIcmsMicro" serializeAs="String">
         <value>0</value>
       </setting>
       <setting name="AliquotaIcmsInterImportados" serializeAs="String">
         <value>4</value>
       </setting>
-      <setting name="AliquotaIcmsInterNacionais" serializeAs="String">
-        <value>12</value>
+      <setting name="FreteMotAcima90HP" serializeAs="String">
+        <value>100</value>
+      </setting>
+      <setting name="DespesasOp" serializeAs="String">
+        <value>2</value>
       </setting>
     </CalculoPrecoVenda.Settings>
   </userSettings>
