--- a/CalculoPrecoVenda/App.config
+++ b/CalculoPrecoVenda/App.config
@@ -13,7 +13,7 @@
   </startup>
   <connectionStrings>
     <add name="CalculoPrecoVendaDb"
-         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CalculoPrecoVendaDb.mdf;Initial Catalog=CalculoPrecoVendaDb;Integrated Security=True;Connect Timeout=30"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|Data\CalculoPrecoVendaDb.mdf;Initial Catalog=CalculoPrecoVendaDb;Integrated Security=True;Connect Timeout=30"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <userSettings>
@@ -62,6 +62,9 @@
       </setting>
       <setting name="DespesasOp" serializeAs="String">
         <value>2</value>
+      </setting>
+      <setting name="AliquotaIcmsInterNacionais" serializeAs="String">
+        <value>12</value>
       </setting>
     </CalculoPrecoVenda.Settings>
   </userSettings>
