--- a/CalculoPrecoVenda/App.config
+++ b/CalculoPrecoVenda/App.config
@@ -7,15 +7,13 @@
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <connectionStrings>
+    <add name="CalculoPrecoVendaDb" connectionString="Data Source=|DataDirectory|\Data\CalcPreco.sdf" providerName="System.Data.SqlServerCe.4.0" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-  <connectionStrings>
-    <add name="CalculoPrecoVendaDb"
-         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|Data\CalculoPrecoVendaDb.mdf;Initial Catalog=CalculoPrecoVendaDb;Integrated Security=True;Connect Timeout=30"
-         providerName="System.Data.SqlClient"/>
-  </connectionStrings>
   <userSettings>
     <CalculoPrecoVenda.Settings>
       <setting name="Irpj" serializeAs="String">
@@ -58,7 +56,7 @@
         <value>4</value>
       </setting>
       <setting name="FreteMotAcima90HP" serializeAs="String">
-        <value>100</value>
+        <value>125</value>
       </setting>
       <setting name="DespesasOp" serializeAs="String">
         <value>2</value>
@@ -69,9 +67,26 @@
     </CalculoPrecoVenda.Settings>
   </userSettings>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="System.Data.SqlServerCe.4.0" />
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact" />
     </providers>
   </entityFramework>
-</configuration>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SqlServerCe.4.0" />
+      <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    </DbProviderFactories>
+  </system.data></configuration>
