--- a/CalculoPrecoVenda/packages.config
+++ b/CalculoPrecoVenda/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net452" />
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net452" />
-  <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net452" />
+  <package id="Extended.Wpf.Toolkit" version="3.1" targetFramework="net452" />
+  <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net452" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net452" />
 </packages>
